getting minor bug of div brand on small scale devices to work

--- a/src/Styles/Landingpage.scss
+++ b/src/Styles/Landingpage.scss
@@ -189,7 +189,7 @@ section.section-2 {
     }
     .time {
       position: absolute;
-      top: -160px;
+      top: -155.5px;
       left: -52px;
       width: max-content;
     }
