--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 $color-pr: rgb(252, 252, 252); 
-body, html{
+body
+{
    font-family: "Poppins" , sans-serif; 
    color: blueviolet;
    width: 100%;
