--- a/src/Styles/mediaQueries/_Xsmall.scss
+++ b/src/Styles/mediaQueries/_Xsmall.scss
@@ -32,7 +32,10 @@
         top: 250%;
     }
     }
-
+    img.brand-logo{
+    height: 150px;
+    width: 150px;
+    }
 }
 @media only screen and (max-width: 350px) {
     
